unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/project_cloud__Board_Process_Step__c.object-meta.xml
<CustomObject>
    <label>Board Process Step</label>
    <nameField>
        <label>Board Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>