unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/fields/project_cloud__Board_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process__c</fullName>
    <inlineHelpText>The Board Process this Step belongs to</inlineHelpText>
    <label>Board Process</label>
    <referenceTo>project_cloud__Board_Process__c</referenceTo>
    <relationshipLabel>Board Process Steps</relationshipLabel>
    <relationshipName>Board_Process_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>