unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/fields/project_cloud__Board_Process_Grouping__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Board Process Grouping this Step is in</inlineHelpText>
    <label>Board Process Grouping</label>
    <referenceTo>project_cloud__Board_Process_Grouping__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>