unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/fields/project_cloud__Completed_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Completion percentage of the Cards contained within this Board Process Step.</description>
    <inlineHelpText>Completion percentage of the Cards contained within this Board Process Step.</inlineHelpText>
    <label>Completion (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>