unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/fields/project_cloud__Completion_Category__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completion_Category__c</fullName>
    <label>Completion Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>