unpackaged/main/default/objects/project_cloud__Board_Process_Step__c/fields/project_cloud__Position__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Position__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Determines the order in which the steps take place</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>